corrected small coding issues, formatting, added class header